# Gigwa-MCP

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  NOTICE  README.md  glama.json  pyproject.toml
.github/workflows/: publish-pypi.yml
docs/: make_example_figures.py
gigwa_mcp/: __init__.py  __main__.py  client.py  config.py  errors.py  server.py
gigwa_mcp/analysis/: __init__.py  genebank.py  genotypes.py  results.py  stats.py
gigwa_mcp/importers/: __init__.py  dartseq.py  refmap.py
gigwa_mcp/tools/: __init__.py  audit.py  connection.py  diversity.py  genotype.py  metadata.py  qc.py
scripts/: benchmark_local.py  gen_synthetic_data.py  run_import_audit.py  run_qc_diversity_validation.py
tests/: test_audit.py  test_client.py  test_dartseq_convert.py  test_diversity_grouping.py  test_genebank.py  test_genotypes.py  test_refmap.py  test_stats.py
