[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gigwa-mcp"
version = "1.0.0"
description = "MCP server for driving Gigwa installations: import genotype/metadata, run QC and diversity analyses."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [{ name = "Anestis Gkanogiannis", email = "anestis@gkanogiannis.com" }]
dependencies = [
    "mcp>=1.27",
    "httpx>=0.27",
    "pandas>=2.0",
    "openpyxl>=3.1",
    "numpy>=1.26",
    "python-dotenv>=1.0",
    "scikit-allel>=1.3",
    "scipy>=1.11",
    "mappy>=2.26",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
viz = ["matplotlib>=3.7"]

[project.scripts]
gigwa-mcp = "gigwa_mcp.__main__:main"

[tool.setuptools.packages.find]
include = ["gigwa_mcp*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
